2006-02-04  Phil Blundell  <pb@reciva.com>

	* event-ui.c (struct edit_state): New members end_date_floating,
	end_time_floating.
	(new_event): Set them to TRUE.
	(sink_end_date, sink_end_time, note_time_change): New functions.
	(note_date_change_appt): Set end date here if it was floating.
	(check_constrains): Deleted.
	(set_notebook_page): Remove call to above function.
	(build_edit_event_window): Use GpeTimeSel rather than combo box
	for time selection.  All uses of these widgets updated.
	(new_event): Mark end time and date as floating.
	(edit_event): Always initialize reminder fields.
	* globals.h (times): Deleted.
	* main.c (times): Likewise.
	(main): Remove code to build list of time strings.

2006-02-04  Phil Blundell  <pb@reciva.com>

	* configure.ac (DEP_MODULES): Require libgpewidget 0.109.

	* year_view.c (day_of_week): Move to...
	* main.c: ... here.
	* globals.h (day_of_week): Add prototype for above.
	* month_view.c (day_of_week): Delete "spare" copy of this function.

	* event-ui.c (weekly_toggled): Deleted.
	(build_edit_event_window): Use recalculate_sensitivities in place
	of above function.  Connect "clicked" handler to day-of-week
	recurrence buttons; connect "changed" handler to date selectors.
	(note_day_change, note_day_change_appt,
	note_day_change_reminder, note_day_change_task): New functions.
	(struct edit_state): Add recur_day_floating.
	(sink_weekly): New function.
	(new_event): Correctly set day-of-week recurrence buttons.  Set
	s->recur_day_floating.

2006-02-01  Phil Blundell  <pb@reciva.com>

	* event-ui.c (edit_event): Correctly initialize reminder time
	field and corresponding checkbox.
	(new_event): Likewise.
	(click_ok): Use event_db_clear_recurrence when appropriate.

2006-01-16  Phil Blundell  <pb@reciva.com>

	* Version 0.69 released.

2006-01-16  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_page_draw_empty): Don't draw black rectangle
	around event bubbles.
